--- a/src/main/resources/assets/sodium/lang/ru_ru.json
+++ b/src/main/resources/assets/sodium/lang/ru_ru.json
@@ -1,1 +1,55 @@
-
+{
+  "sodium.option_impact.low": "Низкий",
+  "sodium.option_impact.medium": "Средний",
+  "sodium.option_impact.high": "Высокий",
+  "sodium.option_impact.extreme": "Экстремальный",
+  "sodium.option_impact.varies": "Разные",
+  "sodium.options.pages.quality": "Качество",
+  "sodium.options.pages.performance": "Производительность",
+  "sodium.options.pages.advanced": "Дополнительно",
+  "sodium.options.view_distance.tooltip": "Дистанция рендеринга контролирует, насколько далеко будет отображаться местность. Меньшие дистанции означают, что будет отображаться меньше местности, что улучшает частоту кадров.",
+  "sodium.options.simulation_distance.tooltip": "Дистанция симуляции контролирует, насколько далеко будет загружаться и обновляться местность и сущности. Меньшие дистанции могут снизить нагрузку на внутренний сервер и улучшить частоту кадров.",
+  "sodium.options.brightness.tooltip": "Контролирует яркость (гамма) игры.",
+  "sodium.options.gui_scale.tooltip": "Устанавливает максимальный коэффициент масштабирования для пользовательского интерфейса. Если используется 'авто', будет всегда использоваться самый большой коэффициент масштабирования.",
+  "sodium.options.fullscreen.tooltip": "Если включено, игра будет отображаться в полноэкранном режиме (если поддерживается).",
+  "sodium.options.v_sync.tooltip": "Если включено, частота кадров игры будет синхронизирована с частотой обновления монитора, что обеспечивает более плавный опыт, но увеличивает задержку ввода. Эта настройка может снизить производительность, если ваша система слишком медленная.",
+  "sodium.options.fps_limit.tooltip": "Ограничивает максимальное количество кадров в секунду. Это может помочь снизить потребление энергии и общую нагрузку на систему при многозадачности. Если VSync включен, эта опция будет игнорироваться, если она не ниже частоты обновления вашего дисплея.",
+  "sodium.options.view_bobbing.tooltip": "Если включено, обзор игрока будет покачиваться при движении. Игроки, испытывающие головокружение во время игры, могут извлечь пользу от отключения этой функции.",
+  "sodium.options.attack_indicator.tooltip": "Контролирует, где на экране будет отображаться индикатор атаки.",
+  "sodium.options.autosave_indicator.tooltip": "Если включено, будет показан индикатор, когда игра сохраняет мир на диск.",
+  "sodium.options.graphics_quality.tooltip": "Настройка качества графики по умолчанию контролирует некоторые устаревшие параметры и необходима для совместимости с модами. Если параметры ниже оставить на 'По умолчанию', они будут использовать эту настройку.",
+  "sodium.options.clouds_quality.tooltip": "Контролирует наличие отображаемых облаков на небе.",
+  "sodium.options.weather_quality.tooltip": "Контролирует качество дождя и снежных эффектов.",
+  "sodium.options.leaves_quality.name": "Листья",
+  "sodium.options.leaves_quality.tooltip": "Контролирует качество листьев.",
+  "sodium.options.particle_quality.tooltip": "Контролирует максимальное количество частиц, которые могут быть отображены на экране в любое время.",
+  "sodium.options.smooth_lighting.tooltip": "Контролирует, будут ли блоки плавно освещены и затенены. Это немного увеличивает время, необходимое для перестройки чанка, но не влияет на частоту кадров.",
+  "sodium.options.biome_blend.value": "%s блок(ов)",
+  "sodium.options.biome_blend.tooltip": "Контролирует диапазон, по которому биомы будут выбраны для цветовой обработки блоков. Более высокие значения значительно увеличивают время, необходимое для постройки чанков, при уменьшающемся улучшении качества.",
+  "sodium.options.entity_distance.tooltip": "Контролирует, насколько далеко могут отображаться сущности от игрока. Более высокие значения увеличивают дистанцию рендеринга за счет частоты кадров.",
+  "sodium.options.entity_shadows.tooltip": "Если включено, будут отрисованы основные тени под мобами и другими сущностями.",
+  "sodium.options.vignette.name": "Виньетирование",
+  "sodium.options.vignette.tooltip": "Если включено, будет отображаться эффект виньетирования на обзоре игрока. Это маловероятно, что повлияет на частоту кадров, если вы не ограничены по заполняющей способности.",
+  "sodium.options.mipmap_levels.tooltip": "Контролирует количество мипмапов, которые будут использоваться для текстур моделей блоков. Более высокие значения обеспечивают лучшее отображение блоков на расстоянии, но могут негативно сказаться на производительности с множеством анимированных текстур.",
+  "sodium.options.use_block_face_culling.name": "Использовать отсечение лиц блоков",
+  "sodium.options.use_block_face_culling.tooltip": "Если включено, только стороны блоков, обращенные к камере, будут передаваться для рендеринга. Это может значительно сократить количество лиц блоков на ранних этапах рендеринга, экономя пропускную способность памяти и время на GPU. Некоторые пакеты ресурсов могут иметь проблемы с этой опцией, поэтому попробуйте отключить ее, если вы видите дыры в блоках.",
+  "sodium.options.use_compact_vertex_format.name": "Использовать компактный формат вершин",
+  "sodium.options.use_compact_vertex_format.tooltip": "Если включено, будет использоваться более компактный формат вершин для рендеринга чанков. Это может значительно снизить использование графической памяти и требования к пропускной способности, особенно для интегрированных графических карт, но может вызвать з-сражение с некоторыми пакетами ресурсов из-за снижения точности атрибутов позиции и текстурных координат. Отключение этого не повлияет, если установлен Oculus.",
+  "sodium.options.translucent_face_sorting.name": "Сортировка полупрозрачных лиц",
+  "sodium.options.translucent_face_sorting.tooltip": "Если включено, полупрозрачные эффекты с поверхностей, таких как стеклянные блоки и вода, будут применены корректно.",
+  "sodium.options.use_fog_occlusion.name": "Использовать окклюзию тумана",
+  "sodium.options.use_fog_occlusion.tooltip": "Если включено, чанки, которые полностью скрыты эффектами тумана, не будут рендериться, что помогает улучшить производительность. Улучшение может быть более драматичным, когда эффекты тумана сильнее (например, под водой), но это может вызвать нежелательные визуальные артефакты между небом и туманом в некоторых сценариях.",
+  "sodium.options.use_entity_culling.name": "Использовать отсечение сущностей",
+  "sodium.options.use_entity_culling.tooltip": "Если включено, сущности, которые не находятся в видимых чанках, будут пропускаться во время рендеринга. Это может помочь улучшить производительность, избегая рендеринга сущностей, расположенных под землей или за стенами.",
+  "sodium.options.animate_only_visible_textures.name": "Анимировать только видимые текстуры",
+  "sodium.options.animate_only_visible_textures.tooltip": "Если включено, только анимированные текстуры, определенные как видимые, будут обновляться. Это может обеспечить значительный прирост частоты кадров на некотором оборудовании, особенно с тяжелыми пакетами ресурсов. Если у вас возникают проблемы с некоторыми текстурами, которые не анимируются, попробуйте отключить эту опцию.",
+  "sodium.options.cpu_render_ahead_limit.name": "Лимит предварительного рендеринга CPU",
+  "sodium.options.cpu_render_ahead_limit.tooltip": "Указывает максимальное количество кадров, которые CPU может ожидать, пока GPU завершит рендеринг. Очень низкие или высокие значения могут создать нестабильность частоты кадров.",
+  "sodium.options.cpu_render_ahead_limit.value": "%s кадр(ов)",
+  "sodium.options.performance_impact_string": "Влияние на производительность: %s",
+  "sodium.options.use_persistent_mapping.name": "Использовать постоянное отображение",
+  "sodium.options.use_persistent_mapping.tooltip": "Если включено, небольшое количество памяти будет постоянно отображено как промежуточный буфер для загрузки чанков, что поможет снизить нагрузку на CPU и нестабильность времени кадра при загрузке или обновлении чанков.\n\nТребуется OpenGL 4.4 или ARB_buffer_storage.",
+  "sodium.options.chunk_update_threads.name": "Потоки обновления чанков",
+  "sodium.options.chunk_update_threads.tooltip": "Указывает количество потоков для использования при постройке чанков. Использование большего количества потоков может ускорить загрузку чанков и скорость обновления, но может негативно повлиять на время кадров.",
+  "sodium.options.always_defer_chunk_updates.name": "Всегда откладывать обновления чанков",
+  "sodium.options.always_defer_chunk_updates.tooltip": "Если включено, рендеринг никогда не будет ждать завершения
