--- a/src/main/resources/assets/embeddium/lang/ru_ru.json
+++ b/src/main/resources/assets/embeddium/lang/ru_ru.json
@@ -1,1 +1,9 @@
-
+{
+  "embeddium.conflicting_mod": "Embeddium обнаружил наличие модов, известных тем, что вызывают проблемы с рендерингом/крашами. Рекомендуется удалить их. См. список ниже.",
+  "embeddium.conflicting_mod_list": "[{2}]",
+  "embeddium.search_bar_empty": "Поиск параметров...",
+  "embeddium.options.added_by_mod_string": "Добавлено модом: %s",
+  "embeddium.options.fullscreen.resolution.tooltip": "Контролирует разрешение игры в полноэкранном режиме.",
+  "embeddium.options.use_quad_normals_for_lighting.name": "Использовать точное затенение квадратов",
+  "embeddium.options.use_quad_normals_for_lighting.tooltip": "При включении Embeddium будет применять затенение к лицам блоков, не относящимся к ванильным, в зависимости от их истинного направления, а не направления по осям. Это может улучшить качество освещения, когда экспериментальная световая система Forge отключена (что рекомендуется для лучшей производительности).\n\nЭто не окажет влияния, если экспериментальная световая система включена."
+}
